--- a/Dockerfile.Network_Volume
+++ b/Dockerfile.Network_Volume
@@ -18,10 +18,14 @@ RUN apt update && \
   rm -rf /var/lib/apt/lists/* && \
   apt clean -y
 
+RUN python3 --version
+
+# Install Worker dependencies
+RUN pip3 install --no-cache-dir requests runpod
+
 # Docker container start script
 COPY start_network_volume.sh /start.sh
 COPY rp_handler.py /
-COPY schemas /schemas
 
 # Start the container
 RUN chmod +x /start.sh
