--- a/Dockerfile.Network_Volume
+++ b/Dockerfile.Network_Volume
@@ -10,13 +10,16 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN apt update && \
   apt upgrade -y && \
   apt install -y \
-  python3-dev \
   python3-venv \
+  python3-pip \
+  python3-tk \
+  python3-dev \
   git \
   git-lfs && \
   apt autoremove -y && \
   rm -rf /var/lib/apt/lists/* && \
   apt clean -y
+
 
 RUN python3 --version
 
