--- a/Dockerfile.Network_Volume
+++ b/Dockerfile.Network_Volume
@@ -20,6 +20,12 @@ RUN apt update && \
   rm -rf /var/lib/apt/lists/* && \
   apt clean -y
 
+# ENV PATH="/usr/local/cuda/bin:${PATH}"
+
+# # Install pytorch
+# ARG PYTORCH="2.2.0"
+# ARG CUDA="121"
+# RUN pip3 install --no-cache-dir -U torch==$PYTORCH torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu$CUDA
 
 RUN python3 --version
 
